<resources>
    <string name="app_name">TRACK TRECK</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="username">Username</string>
    <string name="welcome_to_track_treck">Welcome To Track Treck</string>
    <string name="register">Register</string>
    <string name="login_to_track_treck">Login To Track Treck</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_create_one">Don\'t have an account? Create one</string>
    <string name="user_name">User Name</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="music">Music</string>
    <string name="menu">Menu</string>
    <string name="artist_name">Artist Name</string>
    <string name="song_title">Song Title</string>
</resources>